--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^2.9.11"
+        "postcss": "^8.4.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^13.0.2",
+        "vite": "^2.9.11",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.10.0",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "^5.73.0"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.5"
     }
 }
